--- a/Sidebar/index.html
+++ b/Sidebar/index.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="index,follow">
     <meta name="description" content="descripcion aqui">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Sidebar Ejercicio</title>
 </head>
@@ -22,16 +23,16 @@
             <div class="sidebar__profile">
                 <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/93.jpg" alt="Profile Photo">
                 <h4>Linda Hart</h4>
-                <p class="sidebar__bio">Ingeniería Ambiental, Caldas</p>
+                <p class="sidebar__bio">Ingeniería Ambiental, Envigado</p>
             </div>
             <div class="sidebar__texto">
-                <i class="fa fa-camera-retro" aria-hidden="true"></i> <br>¡Sube tus primeras Fotos!</li>
+                <i class="fa fa-camera" aria-hidden="true"></i> <br>¡Sube tus primeras Fotos!</li>
             </div>
             <ul class="sidebar__nav">
-                <li class="active"> <i class="fa fa-home" aria-hidden="true"></i> Pagina Principal </li>
-                <li> <i class="fa fa-female" aria-hidden="true"></i> Sobre mi</li>
-                <li> <i class="fa fa-camera-retro" aria-hidden="true"></i> Portafolio</li>
-                <li> <i class="fa-solid fa-right-from-bracket" aria-hidden="true"></i> Cerrar Sesion</li>
+                <li class="active"> <i class="fa fa-home" aria-hidden="true"></i></li>
+                <li> <i class="fa fa-female" aria-hidden="true"></i></li>
+                <li> <i class="fa fa-camera-retro" aria-hidden="true"></i></li>
+                <li> <i class="fa-solid fa-right-from-bracket" aria-hidden="true"></i></li>
             </ul>
             
         </div>
